--- a/package.json
+++ b/package.json
@@ -24,5 +24,17 @@
     "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rajatgermany/ShoppingCart.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rajatgermany/ShoppingCart/issues"
+  },
+  "homepage": "https://github.com/rajatgermany/ShoppingCart#readme",
+  "description": ""
 }
